--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Soundboard</string>
-    <string name="fav_desc">Favorite Icon</string>
+    <string name="fav_desc">Icon with full heart</string>
+    <string name="not_fav_desc">Icon with empty heart</string>
 </resources>
